feat: Adds plugin packaging, adds first plugin 'add circles to 2d view', add plugin injection test.

--- a/example/color_elements_from_scene.ipynb
+++ b/example/color_elements_from_scene.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "    get_metadata_viewables,\n",
     "    get_all_model_properties,\n",
     ")\n",
-    "from aps_viewer_sdk.main import APSViewer, ElementsInScene\n",
+    "from aps_viewer_sdk import APSViewer, ElementsInScene\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -58,20 +58,21 @@
     "        timeout=30,\n",
     "    )\n",
     "    resp.raise_for_status()\n",
-    "    return resp.json()\n",
+    "    return cast(dict, resp.json())\n",
     "\n",
     "\n",
-    "def get_translation_status(token: str, object_urn: str) -> tuple[str, str]:\n",
-    "    resp = requests.get(\n",
-    "        f\"{MD_BASE_URL}/designdata/{object_urn}/manifest\",\n",
-    "        headers={\"Authorization\": f\"Bearer {token}\"},\n",
-    "        timeout=30,\n",
-    "    )\n",
-    "    if resp.status_code == 202:\n",
-    "        return \"inprogress\", \"processing\"\n",
-    "    resp.raise_for_status()\n",
-    "    body = resp.json()\n",
-    "    return body.get(\"status\", \"unknown\"), body.get(\"progress\", \"\")"
+    "def poll_until_translated(token: str, urn: str) -> dict:\n",
+    "    while True:\n",
+    "        resp = requests.get(\n",
+    "            f\"{MD_BASE_URL}/designdata/{urn}/manifest\",\n",
+    "            headers={\"Authorization\": f\"Bearer {token}\"},\n",
+    "            timeout=30,\n",
+    "        )\n",
+    "        resp.raise_for_status()\n",
+    "        data = resp.json()\n",
+    "        status = data.get(\"status\", \"failed\")\n",
+    "        if status in (\"success\", \"failed\", \"timeout\"):\n",
+    "            return cast(dict, data)"
    ]
   },
   {
