feat: Add Ruff as a formatter. Run Ruff over the repository and also add a pre-commit hook.

--- a/example/1 - highlight_elements_in_scene/color_elements_from_scene.ipynb
+++ b/example/1 - highlight_elements_in_scene/color_elements_from_scene.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7fb27b941602401d91542211134fc71a",
    "metadata": {},
    "source": [
     "# Model Translation + APS Viewer \n",
@@ -121,7 +122,9 @@
     "client_id = os.environ.get(\"CLIENT_ID\")\n",
     "client_secret = os.environ.get(\"CLIENT_SECRET\")\n",
     "if not client_id or not client_secret:\n",
-    "    raise RuntimeError(\"CLIENT_ID and CLIENT_SECRET must be set in the environment variables.\")\n",
+    "    raise RuntimeError(\n",
+    "        \"CLIENT_ID and CLIENT_SECRET must be set in the environment variables.\"\n",
+    "    )\n",
     "\n",
     "sample_path = Path(\"SampleStructuralModel.rvt\").resolve()\n",
     "\n",
@@ -153,7 +156,7 @@
     "    output_object_key=object_key,\n",
     "    max_wait_time=300,\n",
     "    poll_interval=15,\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
     ")\n",
     "print(f\"Viewer URN: {viewer_urn}\")"
    ]
@@ -222,7 +225,9 @@
     "# Get all model properties to extract external IDs\n",
     "payload: dict[str, object] = get_all_model_properties(token, urn_bs64, model_guid)\n",
     "data_raw = payload.get(\"data\")\n",
-    "data: dict[str, object] = cast(dict[str, object], data_raw if isinstance(data_raw, dict) else payload)\n",
+    "data: dict[str, object] = cast(\n",
+    "    dict[str, object], data_raw if isinstance(data_raw, dict) else payload\n",
+    ")\n",
     "collection = data.get(\"collection\", [])\n",
     "\n",
     "# Extract unique external IDs\n",
