--- a/example/2 - add_meshes_to_scene/add_trees_to_scene.ipynb
+++ b/example/2 - add_meshes_to_scene/add_trees_to_scene.ipynb
@@ -121,7 +121,9 @@
     "client_id = os.environ.get(\"CLIENT_ID\")\n",
     "client_secret = os.environ.get(\"CLIENT_SECRET\")\n",
     "if not client_id or not client_secret:\n",
-    "    raise RuntimeError(\"CLIENT_ID and CLIENT_SECRET must be set in the environment variables.\")\n",
+    "    raise RuntimeError(\n",
+    "        \"CLIENT_ID and CLIENT_SECRET must be set in the environment variables.\"\n",
+    "    )\n",
     "\n",
     "# Resolve the sample file path\n",
     "sample_path = Path(\"SampleModel.rvt\").resolve()\n",
@@ -154,7 +156,7 @@
     "    output_object_key=object_key,\n",
     "    max_wait_time=300,\n",
     "    poll_interval=15,\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
     ")\n",
     "print(f\"Viewer URN: {viewer_urn}\")"
    ]
@@ -193,7 +195,7 @@
     "def make_tree_plugin() -> OverlayMeshes:\n",
     "    \"\"\"Create an OverlayMeshes plugin with three stylized trees.\"\"\"\n",
     "    trees = OverlayMeshes(scene_id=\"trees-overlay\")\n",
-    "    \n",
+    "\n",
     "    # Define specifications for three trees with different sizes and positions\n",
     "    tree_specs = [\n",
     "        {\n",
@@ -235,7 +237,7 @@
     "    for spec in tree_specs:\n",
     "        x, y, z = spec[\"base\"]\n",
     "        trunk_w, trunk_h, trunk_d = spec[\"trunk_size\"]\n",
-    "        \n",
+    "\n",
     "        # Add trunk (box)\n",
     "        trees.add_box(\n",
     "            (x, y, z + trunk_h / 2.0),\n",
@@ -244,7 +246,7 @@
     "            opacity=1.0,\n",
     "            align_to_world_up=True,\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # Add canopy layers (cones)\n",
     "        for canopy in spec[\"canopy\"]:\n",
     "            trees.add_cone(\n",
