--- a/example/3 - add_circles_2d_view/add_circles_to_2d_view.ipynb
+++ b/example/3 - add_circles_2d_view/add_circles_to_2d_view.ipynb
@@ -132,7 +132,9 @@
     "client_id = os.environ.get(\"CLIENT_ID\")\n",
     "client_secret = os.environ.get(\"CLIENT_SECRET\")\n",
     "if not client_id or not client_secret:\n",
-    "    raise RuntimeError(\"CLIENT_ID and CLIENT_SECRET must be set in the environment variables.\")\n",
+    "    raise RuntimeError(\n",
+    "        \"CLIENT_ID and CLIENT_SECRET must be set in the environment variables.\"\n",
+    "    )\n",
     "\n",
     "# Resolve the sample file path\n",
     "sample_path = Path(\"SampleModel.rvt\").resolve()\n",
@@ -165,7 +167,7 @@
     "    output_object_key=object_key,\n",
     "    max_wait_time=300,\n",
     "    poll_interval=15,\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
     ")\n",
     "print(f\"Viewer URN: {viewer_urn}\")"
    ]
@@ -211,7 +213,7 @@
     "# Create the Draw2DCircles plugin with custom settings\n",
     "circle_plugin = Draw2DCircles(\n",
     "    initial_radius=0.5,  # Circle radius in drawing units\n",
-    "    color=\"#00ff00\"      # Green color for circles\n",
+    "    color=\"#00ff00\",  # Green color for circles\n",
     ")\n",
     "\n",
     "print(\"Created Draw2DCircles plugin\")\n",
